change updateLoadingComplete, changeAdvancePaymentComment,MESSAGE_TEXT,changeAdvancePaymentComment,add getNotApproveTrip
